// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android withDivider should render correctly 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 4,
        "elevation": 2,
      },
    ]
  }
>
  <View
    accessibilityLabel="Example Card"
    accessibilityRole="button"
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "flexDirection": "row",
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0.12,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "column",
            "marginBottom": 8,
            "marginTop": 8,
            "width": 1,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0.12,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android withDivider should render correctly with "cornerStyle=large" 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 4,
        "elevation": 2,
      },
      Object {
        "borderRadius": 24,
      },
    ]
  }
>
  <View
    accessibilityLabel="Example Card"
    accessibilityRole="button"
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "flexDirection": "row",
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0.12,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "column",
            "marginBottom": 8,
            "marginTop": 8,
            "width": 1,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0.12,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android withDivider should render correctly with arbitrary props 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 4,
        "elevation": 2,
      },
    ]
  }
>
  <View
    accessibilityLabel="Example Card"
    accessibilityRole="button"
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "flexDirection": "row",
          },
        ],
      ]
    }
    testID="arbitrary value"
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0.12,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "column",
            "marginBottom": 8,
            "marginTop": 8,
            "width": 1,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0.12,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android withDivider should render correctly with custom main style 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 4,
        "elevation": 2,
      },
    ]
  }
>
  <View
    accessibilityLabel="Example Card"
    accessibilityRole="button"
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "flexDirection": "row",
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
          Object {
            "flex": 2,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0.12,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "column",
            "marginBottom": 8,
            "marginTop": 8,
            "width": 1,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0.12,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android withDivider should render correctly with custom stub style 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 4,
        "elevation": 2,
      },
    ]
  }
>
  <View
    accessibilityLabel="Example Card"
    accessibilityRole="button"
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "flexDirection": "row",
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0.12,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "column",
            "marginBottom": 8,
            "marginTop": 8,
            "width": 1,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "padding": 16,
          },
          Object {
            "flex": 3,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0.12,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
  </View>
</View>
`;

exports[`Android withDivider should render correctly without padding 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "rgb(255, 255, 255)",
        "borderRadius": 4,
        "elevation": 2,
      },
    ]
  }
>
  <View
    accessibilityLabel="Example Card"
    accessibilityRole="button"
    accessible={true}
    clickable={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": null,
        "type": "RippleAndroid",
      }
    }
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Array [
          Object {
            "flexDirection": "row",
          },
        ],
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0.12,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "column",
            "marginBottom": 8,
            "marginTop": 8,
            "width": 1,
          },
        ]
      }
    />
    <View
      style={
        Array [
          Object {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "rgb(17, 18, 54)",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0.12,
            },
            Object {},
          ]
        }
      >
        Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
      </Text>
    </View>
  </View>
</View>
`;
